# claugrep

./: Cargo.toml  PKGBUILD  README.md
src/: main.rs  memory.rs  output.rs  parser.rs  search.rs  sessions.rs
tests/: e2e.rs  integration.rs  live.rs  mock.rs
