[package]
name = "claugrep"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "claugrep"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
dirs = "5"
chrono = "0.4"
similar = "2"
console = "0.15"
libc = "0.2.183"

[dev-dependencies]
tempfile = "3"
filetime = "0.2"
